--- a/assets/css/style-guide.css
+++ b/assets/css/style-guide.css
@@ -295,6 +295,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 #sectionIcon .section3 .item { float: left; margin: 0 20px 20px 0; width: 150px; height: 160px; border: 1px solid #ddd; }
 #sectionIcon .section3 .item.mr0 { margin-right: 0; }
 #sectionIcon .section3 .item span { display: inline-block; margin: 53px 48px; width: 54px; height: 54px; background: url(../img-icon/icn-roundness-54x54.png) no-repeat center top; }
+#sectionIcon .section3 .mac span { background-position: center -900px; }
 #sectionIcon .section3 .linux span { background-position: center -240px; }
 #sectionIcon .section3 .windows span { background-position: center top; }
 #sectionIcon .section3 .ios span { background-position: center -60px; }
@@ -303,7 +304,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 #sectionIcon .section3 .setting span { background-position: center -1260px; }
 #sectionIcon .section3 .pc span { background-position: center -120px; }
 #sectionIcon .section3 .barcode span { background-position: center -660px; }
-#sectionIcon .section3 .rasterizing span { background-position: center -1200px; }
+#sectionIcon .section3 .rastering span { background-position: center -1200px; }
 #sectionIcon .section4 { margin-top: 30px; }
 #sectionIcon .section4 .item { position: relative; float: left; margin: 0 20px 20px 0; width: 150px; height: 160px; border: 1px solid #ddd; }
 #sectionIcon .section4 .item.mr0 { margin-right: 0; }
