--- a/assets/css/site_basic.css
+++ b/assets/css/site_basic.css
@@ -16,7 +16,7 @@ body { overflow-x: hidden; }
 strong { font-family: Oswald-Bold; }
 h2 { color: #323234 }
 h3 { color: #323234 }
-.d-btn { display: inline-block; font-family: Oswald-Regular; height: 7rem; padding: 0 3.2rem; line-height: 7rem; color: #FE8E14; background: #ffffff; outline: none; font-size: 2.4rem; border: 0; outline: none; }
+.d-btn { display: inline-block; font-family: Oswald-Regular; height: 7rem; padding: 0 3.2rem; line-height: 7rem; color: #FE8E14; background: transparent; outline: none; font-size: 2.4rem; border: 0; outline: none; }
 .d-btn.orange-btn { background: #FE8E14; color: #ffffff; }
 .d-btn.border-btn { background: transparent; color: #FE8E14; border: 3px solid #FE8E14; line-height: 6.4rem; }
 .d-btn.white-btn { background: #ffffff; color: #FE8E14; }
@@ -101,6 +101,11 @@ table { table-layout: fixed; }
 .tr { text-align: right }
 .tl { text-align: left }
 
+/* position */
+.position-relative {
+    position: relative;
+}
+
 /* float */
 /* .clearfix { clear: both; }
 .clearfix:after { content: "."; display: inline-block; height: 0; clear: both; visibility: hidden; } */
@@ -139,6 +144,9 @@ table { table-layout: fixed; }
 /* text */
 .text-left {
     text-align: left;
+}
+.text-center {
+    text-align: center;
 }
 
 /* vertical align */
@@ -181,6 +189,7 @@ table { table-layout: fixed; }
 .ml15 { margin-left: 15px; }
 .ml20 { margin-left: 20px; }
 .ml30 { margin-left: 30px; }
+.ml60 { margin-left: 60px; }
 .mln5 { margin-left: -5px; }
 
 /* normal padding */
@@ -231,6 +240,7 @@ table { table-layout: fixed; }
 
 .bgGray { background: #f5f5f5; }
 .bgOrange { background: #FE8E14; }
+.bgDark { background: #323234; }
 a.bgOrange:hover { background: #FEA543 }
 a.bgOrange, a.bgOrange:focus, a.bgOrange:active { color: #ffffff; }
 
